98. Logic for Apply or Remove coupon

--- a/Mango.Web/Views/Cart/CartIndex.cshtml
+++ b/Mango.Web/Views/Cart/CartIndex.cshtml
@@ -64,9 +64,18 @@
                     }
                     <div class="row">
                         <div class="col-6">
-                            <span>Coupon:</span>
-                            <input/>
-                            <button type="submit" class="btn-success"> Apply </button>
+                            @if (string.IsNullOrEmpty(Model.CartHeader.CouponCode))
+                            {
+                                <span>Coupon:</span>
+                                <input asp-for="CartHeader.CouponCode" />
+                                <button asp-action="ApplyCoupon" type="submit" class="btn-success"> Apply </button>
+                            }
+                            else
+                            {
+                                <span>Coupon:</span>
+                                <input asp-for="CartHeader.CouponCode" readonly="readonly"/>
+                                <button asp-action="RemoveCoupon" type="submit" class="btn-danger"> Remove </button>
+                            }
                         </div>
                         <div class="col-6 text-end">
                             <span class="text-danger" style="font-size:21px;">
