--- a/Mango.Web/Views/Cart/CartIndex.cshtml
+++ b/Mango.Web/Views/Cart/CartIndex.cshtml
@@ -81,6 +81,10 @@
                             <span class="text-danger" style="font-size:21px;">
                                 Order Total : @string.Format("{0:c}", Model.CartHeader.OrderTotal) <br/>
                             </span>
+                            @if (Model.CartHeader.DiscountTotal > 0)
+                            {
+                                <span class="text-success"> Order Discount : @string.Format("{0:c}", Model.CartHeader.DiscountTotal)</span>
+                            }
                         </div>
                     </div>
                 </div>
